logs/error.txt
pbraun@ubuntu2004-pab:~/_dev/typescript_learning_project_u12$ node server.ts
Debugger listening on ws://127.0.0.1:43853/d4e0c24e-5cf0-4d89-87de-9e781e7e88b8
For help, see: https://nodejs.org/en/docs/inspector
Debugger attached.
/home/pbraun/_dev/typescript_learning_project_u12/server.ts:1
import http from 'http';
       ^^^^

SyntaxError: Unexpected identifier
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:831:12)
    at startup (internal/bootstrap/node.js:283:19)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:623:3)
Waiting for the debugger to disconnect...
pbraun@ubuntu2004-pab:~/_dev/typescript_learning_project_u12$ node server.ts
Debugger listening on ws://127.0.0.1:43181/bef3b981-fa48-4fad-997a-65fc866dcc36
For help, see: https://nodejs.org/en/docs/inspector
Debugger attached.
/home/pbraun/_dev/typescript_learning_project_u12/server.ts:1
from * as http from 'http';
          ^^^^

SyntaxError: Unexpected identifier
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:831:12)
    at startup (internal/bootstrap/node.js:283:19)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:623:3)
Waiting for the debugger to disconnect...
pbraun@ubuntu2004-pab:~/_dev/typescript_learning_project_u12$ 